--- a/ReTurnoWeb/appsettings.json
+++ b/ReTurnoWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "cadenaSql": "Server=DESKTOP-8Q1CKL2\\SQLEXPRESS; DataBase=ReTurno; Trusted_Connection=True; TrustServerCertificate=True;"
+  }
 }
