--- a/ReTurnoWeb/appsettings.json
+++ b/ReTurnoWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "cadenaSql": "Server=DESKTOP-8Q1CKL2\\SQLEXPRESS; DataBase=ReTurno; Trusted_Connection=True; TrustServerCertificate=True;"
+    "cadenaSql": "Server=DESKTOP-9IPGNVG\\SQLEXPRESS; DataBase=reTurno; Trusted_Connection=True; TrustServerCertificate=True;"
   }
 }
